--- a/RXPokedex/Base.lproj/Main.storyboard
+++ b/RXPokedex/Base.lproj/Main.storyboard
@@ -8,6 +8,11 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11524"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
+    <customFonts key="customFonts">
+        <array key="PokemonFont.ttf">
+            <string>PokemonSolidNormal</string>
+        </array>
+    </customFonts>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -23,12 +28,34 @@
                         <subviews>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QEo-XD-L20">
                                 <rect key="frame" x="0.0" y="0.0" width="375" height="66"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Pokedex" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vQC-pf-yfn">
+                                        <rect key="frame" x="89" y="8" width="197" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="50" id="HV0-mz-XAn"/>
+                                            <constraint firstAttribute="width" constant="197" id="cs2-XZ-ume"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" name="PokemonSolidNormal" family="Pokemon Solid" pointSize="26"/>
+                                        <color key="textColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="G6i-gc-Vq2">
+                                        <rect key="frame" x="334" y="28" width="33" height="30"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <state key="normal" title="Button" image="music.png"/>
+                                        <connections>
+                                            <action selector="Musicbtnpressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="1TX-Ya-JmH"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
                                 <color key="backgroundColor" red="1" green="0.34509803921568627" blue="0.33333333333333331" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="vQC-pf-yfn" secondAttribute="bottom" constant="8" id="QND-Ox-NZD"/>
+                                    <constraint firstItem="vQC-pf-yfn" firstAttribute="centerX" secondItem="QEo-XD-L20" secondAttribute="centerX" id="ZUy-EU-rcG"/>
                                     <constraint firstAttribute="height" constant="66" id="sF0-jk-Aqu"/>
                                 </constraints>
                             </view>
-                            <searchBar contentMode="redraw" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="udx-5N-65e">
+                            <searchBar contentMode="redraw" fixedFrame="YES" placeholder="Search Pokemon" translatesAutoresizingMaskIntoConstraints="NO" id="udx-5N-65e">
                                 <rect key="frame" x="0.0" y="66" width="375" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -87,6 +114,7 @@
                     </view>
                     <connections>
                         <outlet property="collection" destination="bBJ-ao-A6O" id="Zme-2v-F9d"/>
+                        <outlet property="searchBar" destination="udx-5N-65e" id="IAc-KT-tt8"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
@@ -97,5 +125,6 @@
     <resources>
         <image name="4" width="120" height="120"/>
         <image name="bg" width="1920" height="1200"/>
+        <image name="music.png" width="100" height="100"/>
     </resources>
 </document>
